continuous-integration/tekton-dashboard/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: dashboard.apps-feature-10.greenlightcoop.dev
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
        path: /
  tls:
  - hosts:
    - dashboard.apps-feature-10.greenlightcoop.dev
    secretName: letsencrypt-production
